# launchpad-othello

./: Cargo.toml
src/: main.rs  state.rs
src/controllers/: launchpad_mini_mk1.rs  launchpad_mini_mk3.rs  mod.rs
src/scripts/: mod.rs
src/scripts/othello/: mod.rs
src/scripts/othello/agent/: human.rs  mod.rs
