[profile.release]
opt-level = 3

[package]
name = "launchpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
launchy = { git = "https://github.com/lucemans/launchy.git" }
midir = { version = "0.9.1"}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
lazy_static = "1.4.0"
async-trait = "0.1.75"
magpie = "0.11.0"
